# noice

./: CMakeLists.txt
src/: CMakeLists.txt  CanvasWidget.cpp  CanvasWidget.h  MainWindow.cpp  MainWindow.h  noice.ui
